# TJT.dev-old

./: CNAME  hocs.mjs  index.html  index.mjs  makefile  package-lock.json  package.json  preact.mjs  readme.md
.archived/: makefile  package.json
.archived/a-maze.cljs/: a-maze.cljs.edn  project.clj
.archived/a-maze.js/: package.json
.archived/brain-control/: rollup.config.js  versions.json
.archived/lib/: dom.mjs  test-util.mjs
.archived/scripts/: dev.sh  ls-static-targets.sh
a-maze/: .gitignore  Cargo.toml  README.md  deps.edn  makefile  project.clj
a-maze.cljs/: figwheel-main.edn  project.clj
a-maze.js/: package.json
a-maze.rs/: .gitignore  makefile
amaze/: Cargo.toml  README.md  canvas-grid.mjs  grid.mjs  index.html  index.mjs  main.mjs  makefile  maze.mjs
amaze/src/rust/: Cargo.toml
amaze/src/rust/src/: color.rs  constants.rs  generators.rs  graph.rs  image.rs  lib.rs  maze.rs  pixel.rs  process.rs  types.rs  utils.rs
amaze/src/static/: a-maze.mjs  app.mjs  context.mjs  hocs.mjs  hooks.mjs  icons.mjs  index.html  loader.mjs  maze-generators.mjs  maze.mjs  rand-maze.mjs  react.mjs  svg-grid.mjs  wasm-grid.mjs
amaze/static/: app.mjs  canvas-grid.mjs  hocs.mjs  icons.mjs  loader.mjs  maze-generators.mjs  test-util.mjs  util-spec.mjs  util.mjs
brain-control/: README.md  main.ts  manifest.json  package.json
dom/: index.mjs
game-of-life/: Cargo.toml  LICENSE_MIT
home/: index.html  makefile
lib/: dom-spec.mjs  util-spec.mjs  util.mjs
pomo/: package.json
public/: index.html
scripts/: static-watch.sh
src/: index.tsx
(+103 files in other folders)
